# instant-payment-api/src/main/java/com/example/instant_payment_api/converter/TransactionResponseConverter.java
@@ -1,0 +1,19 @@
+package com.example.instant_payment_api.converter;
+
+import com.example.instant_payment_api.dto.TransactionResponse;
+import com.example.instant_payment_api.model.Transaction;
+import org.springframework.stereotype.Component;
+
+@Component
+public class TransactionResponseConverter {
+
+    public TransactionResponse convert(Transaction transaction) {
+        return TransactionResponse.builder()
+                .id(transaction.getId())
+                .senderAccountId(transaction.getSenderAccountId())
+                .receiverAccountId(transaction.getReceiverAccountId())
+                .amount(transaction.getAmount())
+                .timestamp(transaction.getTimestamp())
+                .build();
+    }
+}
